# Intro-to-Graphics-CIS441

./: README.md
proj1a/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1A.cxx
proj1b/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1B.cxx
proj1c/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1C.cxx  project1C.cxx.bak
proj1d/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj1d_geometry.vtk  project1D.cxx
proj1e/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1E  project1E.cxx
proj1f/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  link.txt  project1F  project1F.cxx  project1F.tar
proj2a/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project2A  project2A.cxx  project2A.tar
proj2b/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project2B  project2B.cxx
projG/: summary.txt
projG/bezier/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  projectG  projectG.cxx  teapot.txt
projG/bezier/Academic Transcript_files/: styles-minimal.css  web_defaultapp.css  web_defaultprint.css
projG/cnn/: 441Project1G.ipynb
projG/cuda/: greysobel  makefile  project1G  project1G.cu
